# neuroforge

./: .gitignore  README.md  ROADMAP.md  all_symbols.txt  boot_disasm.txt  boot_disasm_ascii.txt  cpu_help.txt  disassembly.txt  disassembly_ascii.txt  fixes.md  install-deps.ps1  install-deps.sh  package-lock.json  package.json  renode_types.txt  renode_types_full.txt  tsconfig.app.json
docs/: AI_ASSISTANT_CONTEXT.md  QEMU_RP2040_SUCCESS.md  QEMU_SETUP.md  ROADMAP.md  boards-documentation.md  fixes.md  ledPisca.md  project-tree.md  roadmap-prs-qemu-gpio-monitor.md  roadmap.md  serial-gpio-protocol.md  todayCheck.md  tree.json  tree.md
docs/architecture/: backends.md
docs/boards/: arduino-uno.json  boards ref.md  raspberrypi-pico.json  rp2040-qemu-implementation.md
docs/firmware/: esp32-idf-setup.md  esp32-setup-guide.md  rp2040-setup.md  rp2040-windows-install.ps1
docs/fixes/: rp2040-qemu-fixes.md
docs/roadmaps/: gpio-memory-mapped-postponed.md  gpio-serial-protocol.md
firmware/rp2040/: README.md
poc/: README.md  compile.ps1  debug_qemu.ps1  fix_qemu_path.ps1  install_qemu_avr.ps1  run_qemu.ps1
poc/blink/: blink.ino
poc/gpio_test/: gpio_test.ino
poc/serial_test/: serial_test.ino
qemu/: README.md
server/: .env.example  QEMUGPIOService.ts  QEMURunner.ts  QEMUSimulationEngine.ts  README.md  README_MONITOR.md  README_TESTING.md  SerialGPIOService.ts  example-gpio-esp32.ts  example-gpio.ts  example-mock.ts  example-monitor.ts  example.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
server/cores/: NEUROFORGE_TIME_IMPLEMENTATION.md  install-core-fixed.ps1  install-core.ps1  install-core.sh  patch-wiring.ps1  update-nf-time.ps1
server/scripts/: README.md  backup-cores.ps1  diagnose-arduino-gpio.ps1  fix-arduino-gpio.ps1
server/src/: server.ts
server/test-firmware/: blink.ino
server/test-firmware/rp2040/blink/: CMakeLists.txt  bare.ld  blink.ino  main.c  main_bare.c  main_minimal.c  main_simple.c  main_systick.c  monitor-serial.ps1  test-bare.resc  test-blink.resc  test-simple.resc  timer_patch.py
src/: App.css  App.tsx  index.css
src/components/: ButtonPropertiesPanel.tsx  CanvasArea.tsx  CodeEditor.tsx  CodeEditorWithTabs.tsx  ComponentsLibrary.tsx  FloatingWindow.tsx  LEDPropertiesPanel.tsx  LeftSidebar.tsx  LibrariesPanel.tsx  MCUPropertiesPanel.tsx  PotentiometerPropertiesPanel.tsx  PropertiesPanel.tsx  RGBLEDPropertiesPanel.tsx  Terminal.tsx  (+4 more)
tests/: README.md  test_rp2040.py
(+77 files in other folders)
